Ullrich first round edits to project description

--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -468,3 +468,53 @@ journal = {Progress in Physical Geography}
 	pages = {39--49},
 }
 
+@article{lavers2012detection,
+  title="{The detection of atmospheric rivers in atmospheric reanalyses and their links to British winter floods and the large-scale climatic circulation}",
+  author={Lavers, David A and Villarini, Gabriele and Allan, Richard P and Wood, Eric F and Wade, Andrew J},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={117},
+  number={D20},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{dettinger2011atmospheric,
+  title="{Atmospheric rivers, floods and the water resources of California}",
+  author={Dettinger, Michael D and Ralph, Fred Martin and Das, Tapash and Neiman, Paul J and Cayan, Daniel R},
+  journal={Water},
+  volume={3},
+  number={2},
+  pages={445--478},
+  year={2011},
+  publisher={Molecular Diversity Preservation International}
+}
+
+@article{ralph2004satellite,
+  title="{Satellite and CALJET aircraft observations of atmospheric rivers over the eastern North Pacific Ocean during the winter of 1997/98}",
+  author={Ralph, F Martin and Neiman, Paul J and Wick, Gary A},
+  journal={Monthly Weather Review},
+  volume={132},
+  number={7},
+  pages={1721--1745},
+  year={2004}
+}
+
+@article{neiman2008meteorological,
+  title="{Meteorological characteristics and overland precipitation impacts of atmospheric rivers affecting the west coast of North America based on eight years of SSM/I satellite observations}",
+  author={Neiman, Paul J and Ralph, F Martin and Wick, Gary A and Lundquist, Jessica D and Dettinger, Michael D},
+  journal={Journal of Hydrometeorology},
+  volume={9},
+  number={1},
+  pages={22--47},
+  year={2008}
+}
+
+@article{guan2010extreme,
+  title="{Extreme snowfall events linked to atmospheric rivers and surface air temperature via satellite measurements}",
+  author={Guan, Bin and Molotch, Noah P and Waliser, Duane E and Fetzer, Eric J and Neiman, Paul J},
+  journal={Geophysical Research Letters},
+  volume={37},
+  number={20},
+  year={2010},
+  publisher={Wiley Online Library}
+}
