--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -232,21 +232,11 @@
   year={1995}
 }
 
-@article{zarzycki2014using,
-  title={Using Variable-Resolution Meshes to Model Tropical Cyclones in the Community Atmosphere Model},
-  author={Zarzycki, Colin M and Jablonowski, Christiane and Taylor, Mark A},
-  journal={Monthly Weather Review},
-  volume={142},
-  number={3},
-  pages={1221--1239},
-  year={2014}
-}
-
 @article{zarzycki2014localizedgrid,
   title={Assessing the model climatology of a multidecadal variable-resolution global atmospheric general circulation model simulation},
   author={Zarzycki, Colin M and Jablonowski, Christiane and Thatcher, Diana R and Taylor, Mark A},
   journal={Journal of Climate},
-  year={2014}
+  year={2014},
   NOTE = {in review}
 }
 
@@ -273,15 +263,6 @@ year = {2014},
   volume={49},
   pages={6731--6743},
   year={2013},
-}
-
-@article{ralph2004satellite,
-  title={Satellite and CALJET aircraft observations of atmospheric rivers over the eastern North Pacific Ocean during the winter of 1997/98},
-  author={Ralph, F Martin and Neiman, Paul J and Wick, Gary A},
-  journal={Monthly Weather Review},
-  volume={132},
-  pages={1721--1745},
-  year={2004}
 }
 
 @article{fang2014,
@@ -357,7 +338,7 @@ TITLE = {{California Agricultural Production Statistics}},
 NOTE = {[Available online at \url{http://www.cdfa.ca.gov/statistics/}]}}
 
 @MISC{NCAR2009,
-AUTHOR = {{ National Center for Atmospheric Research (NCAR)}}, 
+AUTHOR = {{National Center for Atmospheric Research (NCAR)}}, 
 YEAR = {cited 2014}, 
 TITLE = {{National Center for Atmospheric Research 2009-2014 Strategic Plan. Technical
 Report.}},
@@ -517,4 +498,92 @@ journal = {Progress in Physical Geography}
   number={20},
   year={2010},
   publisher={Wiley Online Library}
+}
+
+@ARTICLE{skamarock2012mpas,
+   author = {{Skamarock}, W.~C. and {Klemp}, J.~B. and {Duda}, M.~G. and 
+	{Fowler}, L.~D. and {Park}, S.-H. and {Ringler}, T.~D.},
+    title = "{A multiscale nonhydrostatic atmospheric model using centroidal Voronoi tesselations and C-grid staggering}",
+  journal = {Monthly Weather Review},
+     year = 2012,
+   volume = 140,
+    pages = {3090-3105},
+      doi = {10.1175/MWR-D-11-00215.1}
+}
+
+@ARTICLE{LMHSJL2013MWR,
+  title={A Two-Way Nested Global-Regional Dynamical Core on the Cubed-Sphere Grid},
+  author={Harris, Lucas M and Lin, Shian-Jiann},
+  journal={Mon. Weather Rev.},
+  volume={141},
+  number={1},
+  pages={283--306},
+  year={2013}
+}
+
+@article{CMZCJMAT2013MWR,
+  title={Using Variable Resolution Meshes to Model Tropical Cyclones in the {C}ommunity {A}tmosphere {M}odel},
+  author={Zarzycki, Colin M and Jablonowski, Christiane and Taylor, Mark A},
+  journal={Mon. Weather Rev.},
+  year={2013},
+  note={In press}
+}
+
+@article{mccorquodale2014adaptive,
+  author = {McCorquodale, P. and P.~A. Ullrich and H. Johansen and P. Colella},
+  year = {2014},
+  title = "{An adaptive multiblock high-order finite-volume method for solving the shallow-water equations on the sphere}",
+  journal = {Comm. Appl. Math. Comp. Sci.},
+  note = {Under revision}
+} 
+
+@article{zarzycki2014multidecadal,
+  title="{A multidecadal simulation of Atlantic tropical cyclones using a variable-resolution global atmospheric general circulation model}",
+  author={Zarzycki, Colin M and Jablonowski, Christiane},
+  journal={J. Adv. Model. Earth Systems},
+  volume={6},
+  number={3},
+  pages={805--828},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{rauscher2013exploring,
+  title={Exploring a Global Multiresolution Modeling Approach Using Aquaplanet Simulations*},
+  author={Rauscher, Sara A and Ringler, Todd D and Skamarock, William C and Mirin, Arthur A},
+  journal={J. Climate},
+  volume={26},
+  number={8},
+  pages={2432--2452},
+  year={2013}
+}
+
+@article{rauscher2014impact,
+  title={Impact of Variable-Resolution Meshes on Midlatitude Baroclinic Eddies Using {CAM-MPAS-A}},
+  author={Rauscher, Sara A and Ringler, Todd D},
+  journal={Mon. Weather Rev.},
+  volume={142},
+  number={11},
+  pages={4256--4268},
+  year={2014}
+}
+
+@article{zarzycki2014aquaplanet,
+  title="{Aquaplanet Experiments Using CAM's Variable Resolution Dynamical Core}",
+  author={Zarzycki, Colin M and Levy, Michael N and Jablonowski, Christiane and Overfelt, James R and Taylor, Mark A and Ullrich, Paul A},
+  journal={J. Climate},
+  volume={27},
+  pages={5481--5503},
+  year={2014}
+}
+
+@ARTICLE{JTTDRWCSJBK2009JCP,
+  title={Numerical representation of geostrophic modes on arbitrarily structured {C}-grids},
+  author={Thuburn, J. and Ringler, T.D. and Skamarock, W.C. and Klemp, J.B.},
+  journal={J. Comput. Phys.},
+  volume={228},
+  number={22},
+  pages={8321--8335},
+  year={2009},
+  publisher={Elsevier}
 }
