--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -38,7 +38,7 @@
 }
 
 @article{mesinger2006north,
-  title={North American regional reanalysis},
+  title="{North American Regional Reanalysis}",
   author={Mesinger, Fedor and DiMego, Geoff and Kalnay, Eugenia and Mitchell, Kenneth and Shafran, Perry C and Ebisuzaki, Wesley and Jovic, Du{\v{s}}an and Woollen, Jack and Rogers, Eric and Berbery, Ernesto H and others},
   journal={Bulletin of the American Meteorological Society},
   volume={87},
@@ -47,7 +47,7 @@
 }
 
 @article{saha2014ncep,
-  title={The NCEP climate forecast system version 2},
+  title="{The NCEP climate forecast system version 2}",
   author={Saha, Suranjana and Moorthi, Shrinivas and Wu, Xingren and Wang, Jiande and Nadiga, Sudhir and Tripp, Patrick and Behringer, David and Hou, Yu-Tai and Chuang, Hui-ya and Iredell, Mark and others},
   journal={Journal of Climate},
   volume={27},
@@ -56,7 +56,7 @@
 }
 
 @article{zender2006netcdf,
-  title={netCDF Operators (NCO) for analysis of self-describing gridded geoscience data},
+  title="{netCDF Operators (NCO) for analysis of self-describing gridded geoscience data}",
   author={Zender, CS},
   journal={Submitted to Environ. Modell. Softw},
   year={2006}
@@ -119,6 +119,53 @@
   year={2013}
 }
 
+@ARTICLE{ullrich2014fluxform,
+   author = {{Ullrich}, P.~A. and {Norman}, M.~R.},
+    title = "{The Flux-Form Semi-Lagrangian Spectral Element (FF-SLSE) method for tracer transport}",
+journal = {Quart. J. Royal Meteor. Soc.},
+   year = {2014},
+   volume = {140},
+   issue = {680},
+   pages = {1069-1085},
+   doi = {10.1002/qj.2184},
+   url = {http://amg.ucdavis.edu/SemiLagrangianSEDraft.pdf}
+}
+
+@article{guba2014viscosity,
+  author = {Guba, O. and Taylor, M. A. and Ullrich, P. A. and Overfelt, J. R. and Levy, M. N.},
+  year = 2014,
+  title =  "{The spectral element method on variable resolution grids: Evaluating grid sensitivity and resolution-aware numerical viscosity}",
+  journal = {Geosci. Model Dev. Disc.},
+  volume = {7},
+  number = {3},
+  pages = {4081--4117},
+  url = {http://www.geosci-model-dev-discuss.net/7/4081/2014/},
+  doi = {10.5194/gmdd-7-4081-2014}
+}
+
+@article{ullrich2014global,
+  author = {Ullrich, P. A.},
+  title = {A global finite-element shallow-water model supporting continuous and discontinuous elements},
+  journal = {Geosci. Model Dev. Disc.},
+  volume = {7},
+  year = {2014},
+  number = {4},
+  pages = {5141--5182},
+  url = {http://www.geosci-model-dev-discuss.net/7/5141/2014/},
+  doi = {10.5194/gmdd-7-5141-2014}
+}
+
+@ARTICLE{ullrich2014understanding,
+  title = "{Understanding the treatment of waves in atmospheric models, Part I: The shortest resolved waves of the 1D linearized shallow water equations}",
+  author = {Ullrich, P.~A.},
+  journal = {Quart. J. Royal Meteor. Soc.},
+  year = 2013,
+  volume = {140},
+  issue = {682},
+  pages = {1426--1440},
+  doi = {10.1002/qj.2226}
+}
+
 @article{ullrich2012mcore,
   title={MCore: A non-hydrostatic atmospheric dynamical core utilizing high-order finite-volume methods},
   author={Ullrich, Paul A and Jablonowski, Christiane},
@@ -130,6 +177,37 @@
   publisher={Elsevier}
 }
 
+@INPROCEEDINGS{PHLPAURDN2011SPRINGER,
+   author = {{Lauritzen}, P.~H. and {Ullrich}, P.~A. and {Nair}, R.~D.},
+    title = "{Atmospheric Transport Schemes: Desirable Properties and a Semi-Lagrangian View on Finite-Volume Discretizations}",
+  chapter = 8,
+    pages = {185--250},
+publisher = {Springer},
+     year = {2011},
+  editors = {{Lauritzen}, P.~H. and {Jablonowski}, C. and {Taylor}, M.~A. and {Nair}, R.~D.},
+booktitle = "{Numerical Techniques for Global Atmospheric Models, Lecture Notes in Computational Science and Engineering}",
+   volume = {80}
+}
+
+@ARTICLE{ullrich2014baroclinic,
+   author = {{Ullrich}, P.~A. and {Reed}, K.~A. and {Jablonowski}, C.},
+    title = "{A baroclinic instability test case in a 3D channel}",
+journal = {Quart. J. Royal Meteor. Soc.},
+   year = {2014},
+   note = {In review}
+}
+
+@article{ullrich2014proposed,
+  title={A proposed baroclinic wave test case for deep and shallow-atmosphere dynamical cores},
+  author={Ullrich, Paul A and Melvin, Thomas and Jablonowski, Christiane and Staniforth, Andrew},
+  journal={Quart. J. Royal Meteor. Soc.},
+  year={2014},
+  publisher={John Wiley \& Sons, Ltd},
+  volume={140},
+  number={682},
+  pages={1590--1602}
+}
+
 @article{ullrich2012operator,
   title={Operator-split Runge-Kutta-Rosenbrock methods for nonhydrostatic atmospheric models},
   author={Ullrich, Paul and Jablonowski, Christiane},
@@ -138,6 +216,46 @@
   number={4},
   pages={1257--1284},
   year={2012}
+}
+
+ @article{kent2013dynamical,
+  title="{Dynamical core model intercomparison project: Tracer transport test cases}",
+  author={Kent, James and Ullrich, Paul A and Jablonowski, Christiane},
+  journal={Quart. J. Royal Meteor. Soc.},
+  year={2013},
+  publisher={Wiley Online Library},
+  volume={140},
+  number={681},
+  pages={1279--1293},
+  doi = {10.1002/qj.2208}
+}
+
+@TECHREPORT{DCMIP2012TESTCASES,
+  author = {{Ullrich}, P.~A. and {Jablonowski}, C. and {Kent}, J. and {Lauritzen}, P.~H. and {Nair}, R.~D. and {Taylor}, M.~A.},
+  title = "{Dynamical Core Model Intercomparison Project (DCMIP) Test Case Document}",
+  year = {2012},
+  url = "{http://hydra-cog.fsl.noaa.gov/site_media/docs/DCMIP-TestCaseDocument_v1.7.pdf}"
+}
+
+@ARTICLE{ullrich2012considerations,
+  author = {Ullrich, Paul Aaron and Lauritzen, Peter Hjort and Jablonowski, Christiane},
+  title = {Some considerations for high-order `incremental remap'-based transport schemes: edges, reconstructions, and area integration},
+  journal = {Int. J. Numer. Meth. Fluids},
+  publisher = {John Wiley & Sons, Ltd},
+  issn = {1097-0363},
+  doi = {10.1002/fld.3703},
+  pages = {},
+  year = {2012},
+}
+
+@ARTICLE{ullrich2011analysis,
+   author = {{Ullrich}, P.~A. and {Jablonowski}, C.},
+    title = "{An analysis of 1D finite-volume methods for geophysical problems on refined grids}",
+  journal = {J. Comput. Phys.},
+     year = 2011,
+   volume = 230,
+    pages = {706-725},
+      doi = {10.1016/j.jcp.2010.10.014}
 }
 
 @article{ullrich2010high,
@@ -586,4 +704,20 @@ journal = {Progress in Physical Geography}
   pages={8321--8335},
   year={2009},
   publisher={Elsevier}
+}
+
+@article{ullrich2015remapping,
+  title={Arbitrary-Order Conservative and Consistent Remapping and a Theory of Linear Maps, Part 1},
+  author={Ullrich, P.~A. and Taylor, M.~A.},
+  journal={Mon. Weather Rev.},
+  note={Under review},
+  year={2015}
+}
+
+@article{ullrich2015extremes,
+  title="{TempestExtremes: A new toolset for extreme weather detection and characterization}",
+  author={Ullrich, P.~A. and Fong, J. and Pinheiro, M.},
+  journal={Procedia Computer Science},
+  note={In preparation},
+  year={2015}
 }
