--- a/Ullrich-MountainSnowpack-References.tex
+++ b/Ullrich-MountainSnowpack-References.tex
@@ -18,10 +18,12 @@
 
 \begin{document}
 
-\setcounter{section}{4}
+\appendix
 
-\section{References}
-\bibliographystyle{ametsoc2014}  
-\bibliography{MountainSnowpack}
+\addtocounter{section}{4}
+
+\section{References Cited}
+
+\input{Ullrich-MountainSnowpack-ProjectDescription.bbl}
 
 \end{document}
