- Added project summary

--- a/MountainSnowpack.bib
+++ b/MountainSnowpack.bib
@@ -63,7 +63,7 @@
 }
 
 @techreport{schulzweida2007cdo,
-  title={CDO user’s guide--Climate Data Operators},
+  title={CDO user's guide--Climate Data Operators},
   author={Schulzweida, U and Kornblueh, L and Quast, R},
   year={2007},
   institution={Version 1.0. 7, Tech. rep., online available at: www. mpimet. mpg. de/fileadmin/software/cdo}
