--- a/Ullrich-MountainSnowpack-ProjectDescription.tex
+++ b/Ullrich-MountainSnowpack-ProjectDescription.tex
@@ -48,9 +48,9 @@
 
 \section{Project Description}
 \subsection{Background and Summary}
-The next century will see unprecedented changes to the climate system. The most well understood trends (such as increasing global surface temperature) are of a broad global nature and do not necessarily reflect changes on regional scales, which are key for planning on all levels. For this reason, developing a scientific understanding of changing regional climate is an unmet challenge that must be addressed. Regional climate change is particularly important to California, one of the most environmentally and agriculturally diverse regions in the world. With around two-thirds of California's developed water supply originating from the Sierra Nevada, there is growing concern that climate change will directly alter the tendencies of this natural reservoir of water.  The primary source of freshwater from this region comes in the form of winter snowpack, providing one-third of California's available water.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will assuredly stem late summer water flow that is integral to maintaining agricultural, environmental, and municipal water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale and convective snow systems, topography (with resulting orographic forcing and snow line representation), and the overall fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
+The next century will see unprecedented changes to the climate system. The most well understood trends (such as increasing global surface temperature) are of a broad global nature and do not necessarily reflect changes on regional scales, which are key for planning on all levels. For this reason, developing a scientific understanding of changing regional climate is an unmet challenge that must be addressed. Regional climate change is particularly important to California, one of the most environmentally and agriculturally diverse regions in the world. With around two-thirds of California's developed water supply originating from the Sierra Nevada, there is growing concern that climate change will directly alter this natural reservoir of water.  The primary source of freshwater from this region comes in the form of winter snowpack.  As global temperatures rise, snowpack is expected to decline dramatically and melt earlier in the season.  These two factors will assuredly stem late summer water flow that is integral to maintaining agricultural, environmental, and municipal water needs.  Modeling snowpack accurately requires the need for high model resolution to represent large-scale and convective snow systems, topography (with resulting orographic forcing and snow line representation), and the overall fractal nature of snow cover extent and depth. To address our understanding of these features, this proposal advances the use of a next generation modeling tool to better understand regional climate change and its effect on snowpack in California and the broader western USA.
 \\\\
-The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, specifically water associated with mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  In order to address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global modeling systems (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.
+The \textbf{central objective} of this work is to better understand how climate change will affect water resources in California and the western USA, specifically water associated with mountain snowpack.  We postulate that although global climate change will not lead to a significant change in total precipitation throughout the western states, this region will see shifts in precipitation storage due to changes in precipitation timing, spatial distribution and type, with a steady decline in winter snowpack, especially in lower elevation basins.  The magnitude and extent of these changes remains a key question.  In order to address this, our work will utilize a multitude of climate model, observational, and reanalysis datasets to provide a comprehensive assessment of how water resources are changing.  A unique strength and theme of this proposal is the use of \textbf{variable-resolution global climate models (VRGCMs)}, which have the capacity to achieve high spatial resolution over a limited-area region.
 \\\\
 The key \textbf{scientific questions} that will be addressed by this proposal are as follows:
 
@@ -93,7 +93,7 @@ This research fits well within the objectives of the Climate and Large-Scale Dyn
 
 \subsubsection{Broader Impacts}
 
-This work has the potential to greatly increase our capacity to predict future trends in mountain snowpack, with clear consequences for agricultural, urban and ecological management.  Our evaluation of snowpack trends will be informative to policymakers and stakeholders at both the national and regional level.  It is a key objective of this proposal is to make a concerted effort towards communicating and developing climate model tools and data that is more accessible and usable for agency managers and decision makers alike.  We also expect that our work with VRGCMs will lead to a new hybrid form of global/regional climate modeling, more realistic modeled outcomes, and an improvement in model performance at regional scales ($<$ 50km).
+This work has the potential to greatly increase our capacity to predict future trends in mountain snowpack, with clear consequences for agricultural, municipal and ecological management.  Our evaluation of snowpack trends will be informative to policymakers and stakeholders at both the national and regional level.  It is a key objective of this proposal to make a concerted effort towards communicating and developing climate model tools and data that is more accessible and usable for agency managers and decision makers alike.  We also expect that our work with VRGCMs will lead to a new hybrid form of global/regional climate modeling, more realistic modeled outcomes, and an improvement in model performance at regional scales ($<$ 50km).
 
 %  The western USA has been chosen as our region of study since it is a unique hydroclimate regime in which snowpack provides the vast majority of freshwater resources (especially during summer months), and consequently a region that is at particular risk under anticipated climate change.
   
