Updates to Facilities document (1/9/15)

--- a/Ullrich-MountainSnowpack-Facilities.tex
+++ b/Ullrich-MountainSnowpack-Facilities.tex
@@ -21,7 +21,7 @@
 \setcounter{section}{2}
 
 \section{Facilities}
-Benchmark tests have been run to verify the computational capacity of the UC Davis computing cluster for VRGCM simulation. Refining the Atlantic hurricane basin to 14km resolution over a 111km base resolution has led to an approximate assessment of one month of computing time for a thirty year simulation with prescribed sea surface temperatures on 768 processor cores using CESM. The fully coupled simulations are slowed by the requirement to simulate the ocean, but only a limited number of fully coupled simulations will be required. These simulations have been projected to require roughly two months of computing time over the forty year prediction time. Multiple simulations will also be run in parallel to improve computational throughput.
+Benchmark tests have been run to verify the computational capacity of the UC Davis computing cluster for VRGCM simulation. Refining the Atlantic hurricane basin to 14km resolution over a 111km base resolution has led to an approximate assessment of one month of computing time for a thirty year simulation with prescribed sea surface temperatures on 768 processor cores using CESM. Additionally, several preliminary simulations over the western US domain using the Atmospheric Model Intercomparison Project (AMIP) protocols, prescribed sea surface temperatures and sea ice with fully coupled atmosphere and land model simulations, were also conducted on the UC Davis computing cluster.  These simulations resulted in a  throughput of 6 minutes/1 day simulated for a 28km VRGCM simulation (12 nodes) and a throughput of 9 minutes/1 day simulated for a 14km VRGCM simulation (20 nodes).  The proposed fully coupled CESM simulations (atmosphere, land, and ocean model) will be slowed by the requirement to simulate the ocean, but only a limited number of fully coupled simulations will be required. These simulations have been projected to require roughly two months of computing time over the forty year prediction time. Multiple simulations will also be run in parallel to improve computational throughput.
 
 \textbf{UC Davis}:  This project requires computational resources for implementation and testing of software over the course of the project. The University of California, Davis has recently invested in building a campus-wide computing cluster for the advancement of scientific research in the environmental sciences, of which a significant portion was provided as part of the PI’s start-up package. Consequently the PI and his research team will have high-priority access to this cluster, with over 1,500 processors, including full-time technical support from the campus computing team. A laptop for the graduate student researcher is also provided by the PI’s start-up package.
 
